CSS: Fixed alignment issue in form

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -723,3 +723,14 @@ code-editor {
         overflow: visible;
     }
 }
+
+ng-select .ui-select-container {
+    width: 100% !important;
+}
+
+.form-text {
+    font-size: 10px;
+    position: absolute;
+    bottom: -14px;
+    color: red;
+}
